--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="icon" href="logo.jpeg">
+    <link rel="stylesheet" href="style.css">
+    <title>Bio-Waste</title>
 </head>
 <body>
-    <h3>prueba</h3>
-    <h2>Lorem ipsum dolor sit.</h2>
+    <header>
+        <div class="navbar">
+            <img src="logo.jpeg" alt="logo" class="logo">
+            <ul class="nav_list">
+                <li class="nav_item">Perfil</li>
+                <li class="nav_item">Facturas</li>
+                <li class="nav_item">Nosotros</li>
+            </ul>
+        </div>
+    </header>
+    
+
+
+
 </body>
 </html>
