--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h3>prueba</h3>
     <h2>Lorem ipsum dolor sit.</h2>
+    <h2>Lorem ipsum dolor sit amet consectetur.</h2>
 </body>
 </html>
