--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Bio-Waste</title>
 </head>
 <body>
-    <header>
+    <header class="header">
         <div class="navbar">
             <img src="logo.jpeg" alt="logo" class="logo">
             <ul class="nav_list">
