una previa por hoy zzzz

--- a/index.html
+++ b/index.html
@@ -8,17 +8,30 @@
     <title>Bio-Waste</title>
 </head>
 <body>
-    <header class="header">
-        <div class="navbar">
-            <img src="logo.jpeg" alt="logo" class="logo">
-            <ul class="nav_list">
-                <li class="nav_item">Perfil</li>
-                <li class="nav_item">Facturas</li>
-                <li class="nav_item">Nosotros</li>
-            </ul>
+    <header class="header flexeo">
+        <div class="navbar flexeo">
+            <div class="left_nav flexeo">
+                <a href="#"><img src="logo.jpeg" alt="logo" class="logo"></a>
+                <ul class="nav_listL flexeo">
+                    <a href="#"><li class="nav_itemL fonts">Perfil</li></a>
+                    <a href="#"><li class="nav_itemL fonts">Facturas</li></a>
+                    <a href="#"><li class="nav_itemL fonts">Nosotros</li></a>
+                </ul>
+            </div>
+            <div class="right_nav flexeo">
+                <ul class="nav_listR flexeo">
+                    <a href="#" class="fonts"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="#" class="fonts"><li class="nav_itemR fonts">Sign In</li></a>
+                </ul>
+            </div>
         </div>
     </header>
-    
+    <main>
+        <section>
+            <img src="fondo.jpeg" alt="fondo" class="img_fondo">
+            <h1 class="name fonts">BIOWASTE</h1>
+        </section>
+    </main>
 
 
 
