Cambiar a png añadir hover y arreglar texto

--- a/index.html
+++ b/index.html
@@ -3,11 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo.jpeg">
+    <link rel="icon" href="logo.png">
     <link rel="stylesheet" href="style.css">
     <title>Bio-Waste</title>
 </head>
 <body>
+    <header class="header flexeo">
+        <div class="navbar flexeo">
+            <div class="left_nav flexeo">
+                <a href="#"><img src="logo.png" alt="logo" class="logo"></a>
+                <ul class="nav_listL flexeo">
+                    <a href="#"><li class="nav_itemL fonts">Home</li></a>
+                    <a href="#"><li class="nav_itemL fonts">Productos</li></a>
+                    <a href="#"><li class="nav_itemL fonts">Contacto</li></a>
+                    <a href="#"><li class="nav_itemL fonts">Nosotros</li></a>
+                </ul>
+            </div>
+            <div class="right_nav flexeo">
+                <ul class="nav_listR flexeo">
+                    <a href="#" class="fonts"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="#" class="fonts"><li class="nav_itemR fonts">Sign In</li></a>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section>
+            <img src="fondo.jpeg" alt="fondo" class="img_fondo">
+            <h1 class="name fonts">BIOWASTE</h1>
+        </section>
+    </main>
+
+
 
 </body>
 </html>
