productos provisional y cambios menores

--- a/productos.html
+++ b/productos.html
@@ -8,17 +8,24 @@
     <title>Bio-Waste</title>
 </head>
 <body>
+
     <header class="header flexeo">
         <div class="navbar flexeo">
             <div class="left_nav flexeo">
                 <a href="#"><img src="logo.png" alt="logo" class="logo"></a>
                 <ul class="nav_listL flexeo">
-                    <a href="#"><li class="nav_itemL fonts">Home</li></a>
-                    <a href="productos.html"><li class="nav_itemL fonts">Productos</li></a>
+                    <a href="index.html"><li class="nav_itemL fonts">Home</li></a>
                     <a href="#"><li class="nav_itemL fonts">Contacto</li></a>
                     <a href="#"><li class="nav_itemL fonts">Nosotros</li></a>
                 </ul>
             </div>
+
+    <!-- Titulo centrado de la pagina -->
+
+    <h2 class="title">Productos </h2>
+
+
+
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
                     <a href="#" class="fonts"><li class="nav_itemR">Sign Up</li></a>
@@ -27,14 +34,35 @@
             </div>
         </div>
     </header>
-    <main>
-        <section>
-            <img src="fondo.jpeg" alt="fondo" class="img_fondo">
-            <h1 class="name fonts">BIOWASTE</h1>
-        </section>
-    </main>
 
+    <div class="products">
+        <h1>Fertilizantes</h1>
 
+        <div class="items">
+            <img src="item1.png">
+            <h5>Fertilizante liquido</h5>
+            <h5 class="price">$15.000</h5>
+        
+            <p>L
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, perspiciatis quis possimus facere esse nemo.
+            </p>
+
+            <button>Añadir al carrito</button>
+        </div>
+
+        <div class="items">
+            <img src="item2.png">
+            <h5>Fertilizante Comun</h5>
+            <h5 class="price">$10.000</h5>
+        
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Repellendus, perspiciatis quis possimus facere esse nemo.
+            </p>
+
+            <button>Añadir al carrito</button>
+        </div>
+
+    </div>
 
 </body>
 </html>
