--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
             <div class="left_nav flexeo">
                 <a href="#"><img src="logo.png" alt="logo" class="logo"></a>
                 <ul class="nav_listL flexeo">
-                    <a href="#"><li class="nav_itemL fonts">Home</li></a>
-                    <a href="productos.html"><li class="nav_itemL fonts">Productos</li></a>
-                    <a href="#"><li class="nav_itemL fonts">Contacto</li></a>
-                    <a href="#"><li class="nav_itemL fonts">Nosotros</li></a>
+                    <a href="#"><li class="nav_itemL font_title">Home</li></a>
+                    <a href="productos.html"><li class="nav_itemL font_title">Productos</li></a>
+                    <a href="#"><li class="nav_itemL font_title">Contacto</li></a>
+                    <a href="#"><li class="nav_itemL font_title">Nosotros</li></a>
                 </ul>
             </div>
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
-                    <a href="#" class="fonts"><li class="nav_itemR">Sign Up</li></a>
-                    <a href="#" class="fonts"><li class="nav_itemR fonts">Sign In</li></a>
+                    <a href="#" class="font_title"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="#" class="font_title"><li class="nav_itemR font_title">Sign In</li></a>
                 </ul>
             </div>
         </div>
@@ -30,7 +30,7 @@
     <main>
         <section>
             <img src="fondo.jpeg" alt="fondo" class="img_fondo">
-            <h1 class="name fonts">BIOWASTE</h1>
+            <h1 class="name font_title">BIOWASTE</h1>
         </section>
     </main>
 
