--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <ul class="nav_listL flexeo">
                     <a href="#"><li class="nav_itemL font_title">Home</li></a>
                     <a href="productos.html"><li class="nav_itemL font_title">Productos</li></a>
-                    <a href="#"><li class="nav_itemL font_title">Contacto</li></a>
-                    <a href="#"><li class="nav_itemL font_title">Nosotros</li></a>
+                    <a href="contactanos.html"><li class="nav_itemL font_title">Contacto</li></a>
+                    <a href="nosotros.html"><li class="nav_itemL font_title">Nosotros</li></a>
                 </ul>
             </div>
             <div class="right_nav flexeo">
