--- a/contactanos.html
+++ b/contactanos.html
@@ -11,9 +11,9 @@
     <header class="header flexeo">
         <div class="navbar flexeo">
             <div class="left_nav flexeo">
-                <a href="#"><img src="logo.png" alt="logo" class="logo"></a>
+                <a href="index.html"><img src="logo.png" alt="logo" class="logo"></a>
                 <ul class="nav_listL flexeo">
-                    <a href="index.html"><li class="nav_itemL font_title">Home</li></a>
+                    <a href="index.html"><li class="nav_itemL font_title">Inicio</li></a>
                     <a href="productos.html"><li class="nav_itemL font_title">Productos</li></a>
                     <a href="#"><li class="nav_itemL font_title">Contacto</li></a>
                     <a href="nosotros.html"><li class="nav_itemL font_title">Nosotros</li></a>
@@ -21,8 +21,8 @@
             </div>
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
-                    <a href="#" class="font_title"><li class="nav_itemR">Sign Up</li></a>
-                    <a href="#" class="font_title"><li class="nav_itemR font_title">Sign In</li></a>
+                    <a href="#" class="font_title hover"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="#" class="font_title hover"><li class="nav_itemR font_title">Sign In</li></a>
                 </ul>
             </div>
         </div>
@@ -49,13 +49,13 @@
                         <!-- <br> -->
                         <!-- <br> -->
                     <div class="flexeo a_enviar">
-                        <a href="#" ><button class="boton_enviar">Enviar</button></a>   
+                        <a href="formulario.html" class="boton_enviar" ><p class="texto_enviar fonts" style="margin: 0;">Enviar</p></a>   
                     </div>
                 </form>
             </div>
         </section>
         <div id="message" class="message">
-            <p> En Bio-waste, valoramos cada mensaje que recibimos.<br> Envianosa un correo electrónico o escribenos por WhatsApp. <br>¡Esperamos saber de ti pronto!</p>
+            <p class="fonts"> En Bio-waste, valoramos cada mensaje que recibimos.<br> Envianosa un correo electrónico o escribenos por WhatsApp. <br>¡Esperamos saber de ti pronto!</p>
             <br>
             <div class="logos1 flexeo">
                 <img src="emailIcon.jpeg" alt="contacto1" class="logoimg1">
@@ -67,7 +67,12 @@
             </div>
         </div>
     </main>
-            
+    <footer class="footer_todos" style="margin-top:50px ;">
+        <div class="flexeo">
+            <p class="fonts">Derechos reservados BioWaste.</p>
+            <p class="fonts">"De tus desechos nuestra energia"</p>
+        </div>
+    </footer>       
         
 </body>
 </html>
