--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="left_nav flexeo">
                 <a href="#"><img src="logo.png" alt="logo" class="logo"></a>
                 <ul class="nav_listL flexeo">
-                    <a href="#"><li class="nav_itemL font_title">Home</li></a>
+                    <a href="#"><li class="nav_itemL font_title">Inicio</li></a>
                     <a href="productos.html"><li class="nav_itemL font_title">Productos</li></a>
                     <a href="contactanos.html"><li class="nav_itemL font_title">Contacto</li></a>
                     <a href="nosotros.html"><li class="nav_itemL font_title">Nosotros</li></a>
@@ -21,19 +21,39 @@
             </div>
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
-                    <a href="#" class="font_title"><li class="nav_itemR">Sign Up</li></a>
-                    <a href="#" class="font_title"><li class="nav_itemR font_title">Sign In</li></a>
+                    <a href="#" class="font_title hover"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="#" class="font_title hover"><li class="nav_itemR font_title ">Sign In</li></a>
                 </ul>
             </div>
         </div>
     </header>
-    <main>
+    <main class="imagen_titulo">
         <section>
             <img src="fondo.jpeg" alt="fondo" class="img_fondo">
             <h1 class="name font_title">BIOWASTE</h1>
         </section>
     </main>
 
+    <section class="flexeo vision">
+        <div class="div_imagen">
+            <h2 class="fonts">Misión</h2>
+            <p class="fonts">En Bio Waste, nuestra misión es transformar los residuos biológicos en recursos valiosos para generar energía limpia y productos sostenibles. Nos comprometemos a ofrecer soluciones innovadoras que contribuyan a la economía circular, ayudando a reducir el impacto ambiental y fomentando prácticas responsables en la gestión de residuos.</p>
+        </div>
+    
+        <div class="div_imagen">
+            <h2 class="fonts">Visión</h2>
+            <p class="fonts">Ser líderes en la gestión de residuos biológicos y producción de biomasa, creando un futuro en el que los desechos se conviertan en fuentes de energía renovable y productos ecológicos. Aspiramos a un mundo más limpio y sostenible, donde cada empresa y comunidad participe activamente en la protección del medio ambiente a través de la gestión responsable de sus residuos.</p>
+            <img src="biodi.jpeg" alt="biodigestor" class="biodigestor">
+        </div>
+        
+    </section>
+
+    <footer class="footer_todos">
+        <div class="flexeo">
+            <p class="fonts">Derechos reservados BioWaste.</p>
+            <p class="fonts">"De tus desechos nuestra energia"</p>
+        </div>
+    </footer>
 
 
 </body>
