--- a/contactanos.html
+++ b/contactanos.html
@@ -28,10 +28,14 @@
         </div>
     </header>
     
+    <div class="imagen_titulo">
+        <div class="flexeo" style="height: 100%;">
+            <img src="campesino.jpeg" alt="fondo" class="img_fondo">
+            <h1  class="titleC">¡Contacta con nosotros!</h1>
+        </div>
+    </div>
     <main class="flexeo main_contacto">
-        <img src="campesino.jpeg" alt="fondo" class="img_fondo">
-        <h1  class="titleC fonts">¡Contacta con nosotros!</h1>
-        <section class="section_forms">
+        <section class="section_forms flexeo">
             <div class="info_forms flexeo">
                 <p class="fonts texto_forms"> ¡Estamos aquí para ayudarte! <br><br>Si tienes alguna consulta o necesitas más información, no dudes en ponerte en contacto con nosotros.<br> Rellena el formulario a continuación.<br> Nos aseguraremos de responderte rápidamente.<br> <br>¡Esperamos saber de ti pronto!</p>
                 <img class="img_forms" src="logo.png">                                        
@@ -62,14 +66,18 @@
                 <a target="_blank" href="mailto:Bio-Waste@gmail.com" class="info">Bio-waste@gmail.com</a>
             </div>
             <div class="logos2 flexeo">
-                <img src="whatsIcon.jpeg" alt="contacto1" class="logoimg1">
+                <img src="whatsIcon.jpeg" alt="contacto1" class="logoimg1" style="padding-right: 25px;">
                 <a target="_blank" href="//w.app/BioWaste" class="info"> Nuestro Whatsapp</a>
             </div>
         </div>
     </main>
-    <footer class="footer_todos" style="margin-top:50px ;">
-        <div class="flexeo">
-            <p class="fonts">Derechos reservados BioWaste.</p>
+    
+    <footer class="footer_todos flexeo">
+        <div class="flexeo div_footer">
+            <div class="flexeo">
+                <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
+                <p class="fonts">Derechos reservados BioWaste.</p>
+            </div>
             <p class="fonts">"De tus desechos nuestra energia"</p>
         </div>
     </footer>       
