--- a/formulario.html
+++ b/formulario.html
@@ -32,5 +32,15 @@
         <p class="fonts">Tu formulario fue recibido con satisfaccion!!!!</p>
     </div>
 
+    <footer class="footer_todos flexeo">
+        <div class="flexeo div_footer">
+            <div class="flexeo">
+                <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
+                <p class="fonts">Derechos reservados BioWaste.</p>
+            </div>
+            <p class="fonts">"De tus desechos nuestra energia"</p>
+        </div>
+    </footer>
+
 </body>
 </html>
