--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </header>
     <main class="imagen_titulo">
-        <section>
+        <section class="flexeo">
             <img src="fondo.jpeg" alt="fondo" class="img_fondo">
             <h1 class="name font_title">BIOWASTE</h1>
         </section>
@@ -48,9 +48,12 @@
         
     </section>
 
-    <footer class="footer_todos">
-        <div class="flexeo">
-            <p class="fonts">Derechos reservados BioWaste.</p>
+    <footer class="footer_todos flexeo">
+        <div class="flexeo div_footer">
+            <div class="flexeo">
+                <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
+                <p class="fonts">Derechos reservados BioWaste.</p>
+            </div>
             <p class="fonts">"De tus desechos nuestra energia"</p>
         </div>
     </footer>
