--- a/productos.html
+++ b/productos.html
@@ -34,10 +34,7 @@
         </div>
     </header>
 
-
     <div class="products">
-        
-
         <div class="items">
             <img src="item1.png">
             <h5>Fertilizante liquido</h5>
@@ -83,13 +80,17 @@
 
             <button class="botonCard">Añadir al carrito</button>
         </div>
-
     </div>
-    <footer class="footer_todos" style="margin-top: 150px;">
-        <div class="flexeo">
-            <p class="fonts">Derechos reservados BioWaste.</p>
+    
+    <footer class="footer_todos flexeo">
+        <div class="flexeo div_footer">
+            <div class="flexeo">
+                <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
+                <p class="fonts">Derechos reservados BioWaste.</p>
+            </div>
             <p class="fonts">"De tus desechos nuestra energia"</p>
         </div>
     </footer>
+
 </body>
 </html>
