--- a/login.html
+++ b/login.html
@@ -22,25 +22,31 @@
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
                     <a href="registrarse.html" class="font_title hover"><li class="nav_itemR">Sign Up</li></a>
-                    <a href="login.html" class="font_title hover"><li class="nav_itemR font_title ">Sign In</li></a>
+                    <a href="#" class="font_title hover"><li class="nav_itemR font_title ">Sign In</li></a>
                 </ul>
             </div>
         </div>
     </header>
 
-    <div class="popUp flexeo">
-        <p class="fonts">Tu formulario fue recibido con satisfaccion!!!!</p>
-    </div>
-
-    <footer class="footer_todos flexeo">
-        <div class="flexeo div_footer">
-            <div class="flexeo">
-                <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
-                <p class="fonts">Derechos reservados BioWaste.</p>
+    <div class="login">
+        <div class="login_section">
+            <div class="div_img_logo">
+                <img src="logo.png" alt="logo" class="logo_login">
             </div>
-            <p class="fonts">"De tus desechos nuestra energia"</p>
-        </div>
-    </footer>
 
-</body>
-</html>
+            <div class="login_form">
+                <div class="inputs_form">
+                    <input type="text" class="login_input" value="" placeholder="Correo" id="login_name">
+                    <label class="" for="login_name"></label>
+                </div>
+
+                <div class="inputs_form">
+                    <input type="password" class="login_input" value="" placeholder="Password" id="login_password">
+                    <label class="" for="login_password"></label>
+                </div>
+
+                <a class="boton_login" href="index.html">Login</a>
+                <a class="login_link" href="registrarse.html">olvidaste tu contraseña?</a>
+            </div>
+        </div>
+    </div>
