--- a/nosotros.html
+++ b/nosotros.html
@@ -21,8 +21,8 @@
             </div>
             <div class="right_nav flexeo">
                 <ul class="nav_listR flexeo">
-                    <a href="#" class="font_title hover"><li class="nav_itemR">Sign Up</li></a>
-                    <a href="#" class="font_title hover"><li class="nav_itemR font_title">Sign In</li></a>
+                    <a href="registrarse.html" class="font_title hover"><li class="nav_itemR">Sign Up</li></a>
+                    <a href="login.html" class="font_title hover"><li class="nav_itemR font_title">Sign In</li></a>
                 </ul>
             </div>
         </div>
