se añadio lo que se pedia en el documento ese de presentacion IDK

--- a/formulario.html
+++ b/formulario.html
@@ -29,10 +29,10 @@
     </header>
 
     <div class="popUp flexeo">
-        <p class="fonts">Tu formulario fue recibido con satisfaccion!!!!</p>
+        <p class="fonts" style="font-size: 30px;">Tu formulario fue recibido con satisfaccion!!!!</p>
     </div>
 
-    <footer class="footer_todos flexeo">
+    <footer class="footer_todos flexeo" style="margin-top: 500px;">
         <div class="flexeo div_footer">
             <div class="flexeo">
                 <img src="logo_escuela.png" alt="logo_escuela" class="logo_escuela">
