--- a/login.html
+++ b/login.html
@@ -41,11 +41,11 @@
                 </div>
 
                 <div class="inputs_form">
-                    <input type="password" class="login_input" value="" placeholder="Password" id="login_password">
+                    <input type="password" class="login_input" value="" placeholder="Contraseña" id="login_password">
                     <label class="" for="login_password"></label>
                 </div>
 
-                <a class="boton_login" href="index.html">Login</a>
+                <a class="boton_login" href="index.html">Iniciar sesion</a>
                 <a class="login_link" href="registrarse.html">olvidaste tu contraseña?</a>
             </div>
         </div>
